2009-03-09  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/sourceview.c (sourceview_dispose):
	Removed double unref

2009-03-09  Johannes Schmid  <jhs@gnome.org>

	* plugins/project-wizard/Makefile.am:
	* plugins/project-wizard/anjuta-project-wizard.ui:
	Just use the GtkBuilder file and no longer autogenerate it (fixed intltool problems)
	
	* plugins/sourceview/sourceview-io.c (on_save_finished),
	(sourceview_io_save_as):
	* plugins/sourceview/sourceview.c (sourceview_dispose):
	#574376 – Save doesn't always save

2009-03-07  James Liggett  <jrliggett@cox.net>

	* plugins/git/git-vcs-interface.c (git_ivcs_query_status):
	Fix a crash that happens sometimes when retrieving status via IAnjutaVcs 
	with the Git plugin.

2009-03-04  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-engine-core.c:
	* plugins/symbol-db/symbol-db-engine-priv.h:
	* plugins/symbol-db/symbol-db-engine-queries.c:
	* plugins/symbol-db/symbol-db-engine-utils.c:
	fixed #573858 – link fail on Solaris for plugin symbol-db.

2009-03-04  Johannes Schmid  <jhs@gnome.org>

	* configure.in:
	* plugins/tools/scripts/Makefile.am:
	* scripts/build-schemas.mk:
	Fixed schema file generation and distcheck completely

2009-03-04  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/e-splash.c (e_splash_init), (e_splash_set):
	Fixed critical in new splash code

2009-03-03  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/plugin.c (file_manager_set_default_uri):
	Fixed critical when no path is set in preferences

2009-03-02  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/build-basic-autotools/plugin.c:
	Check Makefile.am too, to enable project menu items

2009-03-02  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/Makefile.am:
	* scripts/build-schemas.mk:
	Fixed distcheck (mostly)

2009-03-02  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-preferences.c (set_property_value_as_string):
	(removed dead code)
	* manuals/anjuta-manual/C/projects.xml: